--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
 <html>
 <head>
-    
+    <!-- Just a comment :) -->
 <script src="https://code.jquery.com/jquery-3.0.0.js"></script>
 <script src="https://cdn.jsdelivr.net/howler.js/2.0.0/howler.js"></script>
     
