--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             <div class="col-xs-12"></div>
         </div>
         <div class="row">
-            <div class="col-xs-12" id="something">Say Panther.</div>
+            <div class="col-xs-12" id="something">For greater good.</div>
         </div>
         <div class="row">
             <div class="col-xs-12"></div>
