--- a/index.html
+++ b/index.html
@@ -27,26 +27,62 @@
 <body>
     <div class="container-fluid">
         <div class="row">
-            <div class="col-xs-12"></div>
+            <div class="col-xs-12" style="margin-top: 10px;">
+                    <div class="col-xs-4" style="background-color: dodgerblue"></div>
+                    <span style="cursor:pointer">
+                        <div class="col-xs-4" style="background-color: deepskyblue; border-radius: 20px;" id="something">
+                            <a id="btn">Quiz 1</a>
+                        </div>
+                    </span>
+                    <div class="col-xs-4" style="background-color: dodgerblue"></div>
+            </div>
         </div>
         <div class="row">
-            <div class="col-xs-12"></div>
+            <div class="col-xs-12" style="margin-top: 10px;">
+                    <div class="col-xs-4" style="background-color: dodgerblue"></div>
+                    <span style="cursor:pointer">
+                        <div class="col-xs-4" style="background-color: deepskyblue; border-radius: 20px;" id="something">
+                            <a id="btn">Quiz 2</a>
+                        </div>
+                    </span>
+                    <div class="col-xs-4" style="background-color: dodgerblue"></div>
+            </div>
         </div>
         <div class="row">
-            <div class="col-xs-12"></div>
+            <div class="col-xs-12" style="margin-top: 10px;">
+                    <div class="col-xs-4" style="background-color: dodgerblue"></div>
+                    <span style="cursor:pointer">
+                        <div class="col-xs-4" style="background-color: deepskyblue; border-radius: 20px;" id="something">
+                            <a id="btn">Quiz 3</a>
+                        </div>
+                    </span>
+                    <div class="col-xs-4" style="background-color: dodgerblue"></div>
+            </div>
         </div>
         <div class="row">
-            <div class="col-xs-12" id="something">For greater good.</div>
+            <div class="col-xs-12" style="margin-top: 10px;">
+                    <div class="col-xs-4" style="background-color: dodgerblue"></div>
+                    <span style="cursor:pointer">
+                        <div class="col-xs-4" style="background-color: deepskyblue; border-radius: 20px;" id="something">
+                            <a id="btn">Quiz 4</a>
+                        </div>
+                    </span>
+                    <div class="col-xs-4" style="background-color: dodgerblue"></div>
+            </div>
         </div>
         <div class="row">
-            <div class="col-xs-12"></div>
+            <div class="col-xs-12" style="margin-top: 10px;">
+                    <div class="col-xs-4" style="background-color: dodgerblue"></div>
+                    <span style="cursor:pointer">
+                        <div class="col-xs-4" style="background-color: deepskyblue; border-radius: 20px;" id="something">
+                            <a id="btn">Quiz 5</a>
+                        </div>
+                    </span>
+                    <div class="col-xs-4" style="background-color: dodgerblue"></div>
+            </div>
         </div>
-        <div class="row">
-            <div class="col-xs-12"></div>
-        </div>
-        <div class="row">
-            <div class="col-xs-12"></div>
-        </div>
+
+
     </div>
     
     <script src="js/stuff.js"></script>
