--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                     <div class="col-xs-4" style="background-color: dodgerblue"></div>
                     <span style="cursor:pointer">
                         <div class="col-xs-4" style="background-color: deepskyblue; border-radius: 20px;" id="something">
-                            <a id="btn">Quiz 1</a>
+                            Quiz 1
                         </div>
                     </span>
                     <div class="col-xs-4" style="background-color: dodgerblue"></div>
@@ -42,7 +42,7 @@
                     <div class="col-xs-4" style="background-color: dodgerblue"></div>
                     <span style="cursor:pointer">
                         <div class="col-xs-4" style="background-color: deepskyblue; border-radius: 20px;" id="something">
-                            <a id="btn">Quiz 2</a>
+                            Quiz 2
                         </div>
                     </span>
                     <div class="col-xs-4" style="background-color: dodgerblue"></div>
@@ -53,7 +53,7 @@
                     <div class="col-xs-4" style="background-color: dodgerblue"></div>
                     <span style="cursor:pointer">
                         <div class="col-xs-4" style="background-color: deepskyblue; border-radius: 20px;" id="something">
-                            <a id="btn">Quiz 3</a>
+                            Quiz 3
                         </div>
                     </span>
                     <div class="col-xs-4" style="background-color: dodgerblue"></div>
@@ -64,7 +64,7 @@
                     <div class="col-xs-4" style="background-color: dodgerblue"></div>
                     <span style="cursor:pointer">
                         <div class="col-xs-4" style="background-color: deepskyblue; border-radius: 20px;" id="something">
-                            <a id="btn">Quiz 4</a>
+                            Quiz 4
                         </div>
                     </span>
                     <div class="col-xs-4" style="background-color: dodgerblue"></div>
@@ -75,7 +75,7 @@
                     <div class="col-xs-4" style="background-color: dodgerblue"></div>
                     <span style="cursor:pointer">
                         <div class="col-xs-4" style="background-color: deepskyblue; border-radius: 20px;" id="something">
-                            <a id="btn">Quiz 5</a>
+                            Quiz 5
                         </div>
                     </span>
                     <div class="col-xs-4" style="background-color: dodgerblue"></div>
