--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                     <div class="col-xs-4" style="background-color: dodgerblue"></div>
                     <span style="cursor:pointer">
                         <div class="col-xs-4" style="background-color: deepskyblue; border-radius: 20px;" id="something">
-                            Quiz 1
+                            Animals
                         </div>
                     </span>
                     <div class="col-xs-4" style="background-color: dodgerblue"></div>
@@ -42,7 +42,7 @@
                     <div class="col-xs-4" style="background-color: dodgerblue"></div>
                     <span style="cursor:pointer">
                         <div class="col-xs-4" style="background-color: deepskyblue; border-radius: 20px;" id="something">
-                            Quiz 2
+                            Instruments
                         </div>
                     </span>
                     <div class="col-xs-4" style="background-color: dodgerblue"></div>
@@ -53,7 +53,7 @@
                     <div class="col-xs-4" style="background-color: dodgerblue"></div>
                     <span style="cursor:pointer">
                         <div class="col-xs-4" style="background-color: deepskyblue; border-radius: 20px;" id="something">
-                            Quiz 3
+                            Street
                         </div>
                     </span>
                     <div class="col-xs-4" style="background-color: dodgerblue"></div>
@@ -64,7 +64,7 @@
                     <div class="col-xs-4" style="background-color: dodgerblue"></div>
                     <span style="cursor:pointer">
                         <div class="col-xs-4" style="background-color: deepskyblue; border-radius: 20px;" id="something">
-                            Quiz 4
+                            Alert
                         </div>
                     </span>
                     <div class="col-xs-4" style="background-color: dodgerblue"></div>
@@ -75,7 +75,7 @@
                     <div class="col-xs-4" style="background-color: dodgerblue"></div>
                     <span style="cursor:pointer">
                         <div class="col-xs-4" style="background-color: deepskyblue; border-radius: 20px;" id="something">
-                            Quiz 5
+                            Idk?
                         </div>
                     </span>
                     <div class="col-xs-4" style="background-color: dodgerblue"></div>
