--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                     <div class="col-xs-4" style="background-color: dodgerblue"></div>
                     <span style="cursor:pointer">
                         <div class="col-xs-4" style="background-color: deepskyblue; border-radius: 20px;" id="something">
-                            Alert
+                            Alerts
                         </div>
                     </span>
                     <div class="col-xs-4" style="background-color: dodgerblue"></div>
