revert color change

--- a/index.html
+++ b/index.html
@@ -28,40 +28,40 @@
     <div class="container-fluid">
         <div class="row">
             <div class="col-xs-12" style="margin-top: 10px;">
-                    <div class="col-xs-4" style="background-color: #7BAFD4"></div>
+                    <div class="col-xs-4" style="background-color: dodgerblue"></div>
                     <span style="cursor:pointer">
                         <div class="col-xs-4" style="background-color: deepskyblue; border-radius: 20px;" id="something">
                             Animals
                         </div>
                     </span>
-                    <div class="col-xs-4" style="background-color: #7BAFD4"></div>
+                    <div class="col-xs-4" style="background-color: dodgerblue"></div>
             </div>
         </div>
         <div class="row">
             <div class="col-xs-12" style="margin-top: 10px;">
-                    <div class="col-xs-4" style="background-color: #7BAFD4"></div>
+                    <div class="col-xs-4" style="background-color: dodgerblue"></div>
                     <span style="cursor:pointer">
                         <div class="col-xs-4" style="background-color: deepskyblue; border-radius: 20px;" id="something">
                             Instruments
                         </div>
                     </span>
-                    <div class="col-xs-4" style="background-color: #7BAFD4"></div>
+                    <div class="col-xs-4" style="background-color: dodgerblue"></div>
             </div>
         </div>
         <div class="row">
             <div class="col-xs-12" style="margin-top: 10px;">
-                    <div class="col-xs-4" style="background-color: #7BAFD4"></div>
+                    <div class="col-xs-4" style="background-color: dodgerblue"></div>
                     <span style="cursor:pointer">
                         <div class="col-xs-4" style="background-color: deepskyblue; border-radius: 20px;" id="something">
                             Street
                         </div>
                     </span>
-                    <div class="col-xs-4" style="background-color: #7BAFD4"></div>
+                    <div class="col-xs-4" style="background-color: dodgerblue"></div>
             </div>
         </div>
         <div class="row">
             <div class="col-xs-12" style="margin-top: 10px;">
-                    <div class="col-xs-4" style="background-color: #7BAFD4"></div>
+                    <div class="col-xs-4" style="background-color: dodgerblue"></div>
                     <span style="cursor:pointer">
                         <div class="col-xs-4" style="background-color: deepskyblue; border-radius: 20px;" id="something">
                             Alerts
@@ -72,13 +72,13 @@
         </div>
         <div class="row">
             <div class="col-xs-12" style="margin-top: 10px;">
-                    <div class="col-xs-4" style="background-color: #7BAFD4"></div>
+                    <div class="col-xs-4" style="background-color: dodgerblue"></div>
                     <span style="cursor:pointer">
                         <div class="col-xs-4" style="background-color: deepskyblue; border-radius: 20px;" id="something">
                             Idk?
                         </div>
                     </span>
-                    <div class="col-xs-4" style="background-color: #7BAFD4"></div>
+                    <div class="col-xs-4" style="background-color: dodgerblue"></div>
             </div>
         </div>
 
