--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <div class="col-xs-12" style="margin-top: 100px;">
                     <div class="col-xs-4" style="background-color: dodgerblue"></div>
                     <span style="cursor:pointer">
-                        <div class="col-xs-4" style="background-color: deepskyblue; border-radius: 20px;" id="something">
+                        <div class="col-xs-4" style="background-color: deepskyblue; border-radius: 20px;" id="Animals">
                             Animals
                         </div>
                     </span>
@@ -41,7 +41,7 @@
             <div class="col-xs-12" style="margin-top: 10px;">
                     <div class="col-xs-4" style="background-color: dodgerblue"></div>
                     <span style="cursor:pointer">
-                        <div class="col-xs-4" style="background-color: deepskyblue; border-radius: 20px;" id="something">
+                        <div class="col-xs-4" style="background-color: deepskyblue; border-radius: 20px;" id="Instruments">
                             Instruments
                         </div>
                     </span>
@@ -52,7 +52,7 @@
             <div class="col-xs-12" style="margin-top: 10px;">
                     <div class="col-xs-4" style="background-color: dodgerblue"></div>
                     <span style="cursor:pointer">
-                        <div class="col-xs-4" style="background-color: deepskyblue; border-radius: 20px;" id="something">
+                        <div class="col-xs-4" style="background-color: deepskyblue; border-radius: 20px;" id="Street">
                             Street
                         </div>
                     </span>
@@ -63,7 +63,7 @@
             <div class="col-xs-12" style="margin-top: 10px;">
                     <div class="col-xs-4" style="background-color: dodgerblue"></div>
                     <span style="cursor:pointer">
-                        <div class="col-xs-4" style="background-color: deepskyblue; border-radius: 20px;" id="something">
+                        <div class="col-xs-4" style="background-color: deepskyblue; border-radius: 20px;" id="Alerts">
                             Alerts
                         </div>
                     </span>
