--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             <div class="col-xs-12" style="margin-top: 20px;">
                     <div class="col-xs-4" style="background-color: dodgerblue"></div>
                     <span style="cursor:pointer">
-                        <div class="col-xs-4" style="background-color: deepskyblue; border-radius: 20px;" id="something">
+                        <div class="col-xs-4" style="background-color: dodgerblue; border-radius: 20px;" id="something">
                         
                         </div>
                     </span>
