--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         <div class="row">
             <div class="col-xs-12" style="margin-top: 20px;">
                     <div class="col-xs-4" style="background-color: dodgerblue"></div>
-                    <span style="cursor:pointer">
+                    <span style="cursor:pointer" id="instruments">
                         <div class="col-xs-4" style="background-color: deepskyblue; border-radius: 20px;" id="something">
                             Instruments
                         </div>
