--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <div class="row">
             <div class="col-xs-12" style="margin-top: 60px;">
                     <div class="col-xs-4" style="background-color: dodgerblue"></div>
-                    <span style="cursor:pointer">
+                    <span style="cursor:pointer" id="animals">
                         <div class="col-xs-4" style="background-color: deepskyblue; border-radius: 20px;" id="something">
                             Animals
                         </div>
@@ -51,7 +51,7 @@
         <div class="row">
             <div class="col-xs-12" style="margin-top: 20px;">
                     <div class="col-xs-4" style="background-color: dodgerblue"></div>
-                    <span style="cursor:pointer">
+                    <span style="cursor:pointer" id="Street">
                         <div class="col-xs-4" style="background-color: deepskyblue; border-radius: 20px;" id="something">
                             Street
                         </div>
@@ -62,7 +62,7 @@
         <div class="row">
             <div class="col-xs-12" style="margin-top: 20px;">
                     <div class="col-xs-4" style="background-color: dodgerblue"></div>
-                    <span style="cursor:pointer">
+                    <span style="cursor:pointer" id="Alerts">
                         <div class="col-xs-4" style="background-color: deepskyblue; border-radius: 20px;" id="something">
                             Alerts
                         </div>
