Main menu button

--- a/index.html
+++ b/index.html
@@ -25,6 +25,19 @@
 </head>
     
 <body>
+    <div class="row">
+        <div class="col-xs-12" style="margin-top: 60px;">
+            <div class="col-xs-4" style="background-color: dodgerblue"></div>
+                <span style="cursor:pointer" id="animals">
+                    <div class="col-xs-4" style="background-color: deepskyblue; border-radius: 20px;" id="something">
+                    </div>
+                </span>
+            <div class="col-xs-1" style="background-color: dodgerblue"></div>
+            <div class="col-xs-1" style="background-color: dodgerblue"></div>
+            <div class="col-xs-1" style="background-color: dodgerblue"></div>
+            <div class="col-xs-1" style="background-color: dodgerblue">lol</div>
+        </div>
+    </div>
     <div class="container-fluid">
         <div class="row">
             <div class="col-xs-12" style="margin-top: 60px;">
@@ -34,10 +47,7 @@
                             Animals
                         </div>
                     </span>
-                    <div class="col-xs-1" style="background-color: dodgerblue"></div>
-                    <div class="col-xs-1" style="background-color: dodgerblue"></div>
-                    <div class="col-xs-1" style="background-color: dodgerblue"></div>
-                    <div class="col-xs-1" style="background-color: dodgerblue"></div>
+                    <div class="col-xs-4" style="background-color: dodgerblue"></div>
             </div>
         </div>
         <div class="row">
