Main menu button

--- a/index.html
+++ b/index.html
@@ -27,11 +27,8 @@
 <body>
     <div class="row">
         <div class="col-xs-12" style="margin-top: 60px;">
-            <div class="col-xs-4" style="background-color: dodgerblue"></div>
-                <span style="cursor:pointer" id="animals">
-                    <div class="col-xs-4" style="background-color: deepskyblue; border-radius: 20px;" id="something">
-                    </div>
-                </span>
+            <div class="col-xs-4" style="background-color: dodgerblue"></div> 
+            <div class="col-xs-4" style="background-color: deepskyblue;"></div>
             <div class="col-xs-1" style="background-color: dodgerblue"></div>
             <div class="col-xs-1" style="background-color: dodgerblue"></div>
             <div class="col-xs-1" style="background-color: dodgerblue"></div>
