--- a/index.html
+++ b/index.html
@@ -26,11 +26,11 @@
     
 <body>
     <div class="row">
-        <div class="col-xs-12" style="margin-top: 60px;">
+        <div class="col-xs-12">
             <div class="col-xs-5" style="background-color: dodgerblue;"></div> 
             <div class="col-xs-5" style="background-color: dodgerblue;"></div>
             <div class="col-xs-1" style="background-color: dodgerblue"></div>
-            <div class="col-xs-1" style="background-color: dodgerblue">lol</div>
+            <div class="col-xs-1" style="background-color: dodgerblue;style="background-color: deepskyblue; border-radius: 20px;"" id="mmButton">lol</div>
         </div>
     </div>
     <div class="container-fluid">
