--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <div class="col-xs-5" style="background-color: dodgerblue;"></div> 
             <div class="col-xs-5" style="background-color: dodgerblue;"></div>
             <div class="col-xs-1" style="background-color: dodgerblue"></div>
-            <div class="col-xs-1" style="background-color: dodgerblue;style="background-color: deepskyblue; border-radius: 20px; id="mmButton">lol</div>
+            <div class="col-xs-1" style="background-color: deepskyblue; border-radius: 20px;" id="mmButton">lol</div>
         </div>
     </div>
     <div class="container-fluid">
