--- a/index.html
+++ b/index.html
@@ -25,15 +25,16 @@
 </head>
     
 <body>
-    <div class="row">
+    
+    <div class="container-fluid">
+        <div class="row">
         <div class="col-xs-12">
             <div class="col-xs-5" style="background-color: dodgerblue;"></div> 
             <div class="col-xs-5" style="background-color: dodgerblue;"></div>
             <div class="col-xs-1" style="background-color: dodgerblue"></div>
-            <div class="col-xs-1" style="background-color: deepskyblue; border-radius: 20px;" id="mmButton">lol</div>
+            <div class="col-xs-1" style="background-color: deepskyblue; border-radius: 8px;" id="mmButton">Main Menu</div>
         </div>
     </div>
-    <div class="container-fluid">
         <div class="row">
             <div class="col-xs-12" style="margin-top: 60px;">
                     <div class="col-xs-4" style="background-color: dodgerblue"></div>
