--- a/index.html
+++ b/index.html
@@ -32,11 +32,11 @@
             <div class="col-xs-5" style="background-color: dodgerblue;"></div> 
             <div class="col-xs-5" style="background-color: dodgerblue;"></div>
             <div class="col-xs-1" style="background-color: dodgerblue"></div>
-            <div class="col-xs-1" style="background-color: deepskyblue; border-radius: 8px;" id="mmButton">Main Menu</div>
+            <div class="col-xs-1" style="background-color: deepskyblue; border-radius: 40px;" id="mmButton">Refresh</div>
         </div>
     </div>
         <div class="row">
-            <div class="col-xs-12" style="margin-top: 60px;">
+            <div class="col-xs-12">
                     <div class="col-xs-4" style="background-color: dodgerblue"></div>
                     <span style="cursor:pointer" id="animals">
                         <div class="col-xs-4" style="background-color: deepskyblue; border-radius: 20px;" id="something">
