--- a/index.html
+++ b/index.html
@@ -32,7 +32,9 @@
             <div class="col-xs-5" style="background-color: dodgerblue;"></div> 
             <div class="col-xs-5" style="background-color: dodgerblue;"></div>
             <div class="col-xs-1" style="background-color: dodgerblue"></div>
-            <div class="col-xs-1" style="background-color: deepskyblue; border-radius: 40px;" id="mmButton">Refresh</div>
+            <span style="cursor:pointer" id="clickMMButton">
+                <div class="col-xs-1" style="background-color: deepskyblue; border-radius: 40px;" id="mmButton">Refresh</div>   
+            </span>
         </div>
     </div>
         <div class="row">
