--- a/index.html
+++ b/index.html
@@ -28,17 +28,7 @@
     
     <div class="container-fluid">
         <div class="row">
-        <div class="col-xs-12">
-            <div class="col-xs-5" style="background-color: dodgerblue;"></div> 
-            <div class="col-xs-5" style="background-color: dodgerblue;"></div>
-            <div class="col-xs-1" style="background-color: dodgerblue"></div>
-            <span style="cursor:pointer" id="clickMMButton">
-                <div class="col-xs-1" style="background-color: deepskyblue; border-radius: 40px;" id="mmButton">Refresh</div>   
-            </span>
-        </div>
-    </div>
-        <div class="row">
-            <div class="col-xs-12">
+            <div class="col-xs-12" style="margin-top: 20px;">
                     <div class="col-xs-4" style="background-color: dodgerblue"></div>
                     <span style="cursor:pointer" id="animals">
                         <div class="col-xs-4" style="background-color: deepskyblue; border-radius: 20px;" id="something">
