--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                     <div class="col-xs-4" style="background-color: dodgerblue"></div>
                     <span style="cursor:pointer" id="Street">
                         <div class="col-xs-4" style="background-color: deepskyblue; border-radius: 20px;" id="something">
-                            Street
+                            Cars
                         </div>
                     </span>
                     <div class="col-xs-4" style="background-color: dodgerblue"></div>
@@ -65,7 +65,7 @@
                     <div class="col-xs-4" style="background-color: dodgerblue"></div>
                     <span style="cursor:pointer" id="Alerts">
                         <div class="col-xs-4" style="background-color: deepskyblue; border-radius: 20px;" id="something">
-                            Alerts
+                            People
                         </div>
                     </span>
                     <div class="col-xs-4" style="background-color: dodgerblue"></div>
